# T-RACE-backend

./: .gitignore  manage.py  pyproject.toml
bot/: admin.py  models.py  urls.py
bot/llm/: llm_services.py  prompt.py
bot/llm/rag/: retrival.py  utils.py
bot/migrations/: 0001_initial.py  0002_contextchunk.py  0003_alter_contextchunk_embedding.py
bot/serializer/: bot_serializer.py
bot/services/: bot_log_service.py  message_services.py  send_message_service.py
bot/views/: message_webhook.py
trace_backend/: asgi.py  settings.py  urls.py  wsgi.py
