[project]
name = "t-race-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.115.0",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
